# VQ_BMP_Compression

./: .gitmodules  CMakeLists.txt  README.md
VQ_BMP_C_App/: CMakeLists.txt
VQ_BMP_C_App/src/: main.c
VQ_BMP_C_Core/: CMakeLists.txt
VQ_BMP_C_Core/includes/: application.h  codebook.h  common.h  compressor.h  config.h  decompressor.h  image_io.h  log.h  utils.h
VQ_BMP_C_Core/src/: application.c  utils.c
